Add zstd decompressor